--- a/themes/next/languages/en.yml
+++ b/themes/next/languages/en.yml
@@ -37,7 +37,7 @@ post:
     author: Post author
     link: Post link
     license_title: Copyright Notice
-    license_content: "All articles in this blog are licensed under %s unless stating additionally."
+    license_content: "All articles in this blog are licensed under %s，please indicate the source if reprinted."
 
 footer:
   powered: "Powered by %s"
